[package]
name = "linode"
version = "0.1.0"
authors = ["Athir Nuaimi <athir@nuaimi.com>"]
categories = ["development-tools", "api-bindings"]
repository = "https://github.com/anuaimi/linode.git"
homepage = "https://github.com/segler-alex/vultr.git"
description = "A pure Rust Linode API binding"
keywords = ["Linode", "Cloud", "IaaS", "API"]
license = "Apache"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }

[lib]
name = "linode"
path = "src/lib.rs"

[[example]]
name = "basic-demo"
path = "examples/basic.rs"